[tool.poetry]
name = "Nitro-Bot"
version = "0.1.0"
description = "nitro generator bot source language python with SIZAR Team"
authors = ["Mr.SIN RE#1528"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
